contact part added

--- a/index.html
+++ b/index.html
@@ -34,18 +34,25 @@
                         <img src="./images/coconut.png" alt="">
                         <h2>Boro boro Narkel</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ipsa neque voluptatem deserunt rem quod dignissimos enim velit ab excepturi?    Praesentium ipsa neque voluptatem deserunt rem quod dignissimos enim velit ab excepturi?  Praesentium ipsa neque voluptatem deserunt rem quod dignissimos enim velit ab excepturi?  </p>
-                    </div>                    <div <div class="coco">
+                    </div>                   
+                     <div class="coco">
                         <img src="./images/juice 1.png" alt="">
                         <h2>Coconut-Juice</h2>
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Praesentium ipsa neque voluptatem deserunt rem quod dignissimos enim velit ab excepturi?   Praesentium ipsa neque voluptatem deserunt rem quod dignissimos enim velit ab excepturi?  Praesentium ipsa neque voluptatem deserunt rem quod dignissimos enim velit ab excepturi?   </p>
                     </div>
                 </div>
-                <div class="contact-us-container">
-                    <h1>Contact Us</h1>
+            </section>
+            <section id="contact">
+                <h1>Are you pissed of your <span class="cocon">Tall Coconut</span>Tree? </h1>
+                <h2>Contact Us</h2>
+                <a href="#">Make a call</a>
+                <div class="image-part">
+                    <img src="./images/Coconut-palm.jpg" alt="">
+                    <img src="./images/Tender_coconut_vendor_in_India.jpg" alt="">
+                    <img src="./images/cocoman.jpg" alt="">
                 </div>
             </section>
             <section id="#about"></section>
-            <section id="#contact">Contact</section>
         
     </main>
     <footer></footer>
